src/static/css/pages/_resume.scss
/* Resume */

// The resume page uses the .post wrapper for consistent styling
#resume {
  // Navigation section inside header
  .link-container {
    padding-top: 1em;

    ul {
      list-style: none;
      padding: 0;
      margin: 0;
      display: flex;
      flex-wrap: wrap;
    }

    li {
      text-decoration: none;
      border-bottom: none;
      display: inline-flex;
    }

    a {
      padding: 0 0.5em;
      margin: 0;
    }

    // Legacy h4 support (in case it's used elsewhere)
    h4 {
      text-decoration: none;
      border-bottom: none;
      display: inline-flex;

      a {
        padding: 0 0.5em;
        margin: 0;
      }
    }
  }

  // Common section styles
  .education,
  .experience,
  .skills,
  .courses,
  .references {
    .title {
      text-align: center;
      margin-bottom: 2em;
    }
  }

  // Experience section
  .experience {
    .title {
      text-align: center;
    }
  }

  .jobs-container {
    margin-bottom: 2em;

    .points {
      li {
        margin: 0;
        padding: 0;
        font-size: 0.9em;
      }
    }
  }

  // Courses section
  .courses {
    padding-top: 1.6em;

    .title {
      text-align: center;
    }

    .course-list {
      text-align: center;

      h4 {
        white-space: nowrap;
      }
    }
  }

  // Skills section
  .skills {
    margin-top: 2em;

    .title {
      text-align: center;

      p {
        font-size: 0.9em;
      }
    }
  }

  // Summary text in experience
  .summary {
    margin-bottom: 0.5em;
    font-size: 0.9em;

    // Override any code block styling from markdown
    code,
    pre {
      background: none;
      border: none;
      padding: 0;
      margin: 0;
      font-family: inherit;
      font-size: inherit;
    }

    pre code {
      display: inline;
      line-height: inherit;
    }
  }

  // References section
  .references {
    margin: 2em 0;

    .title {
      text-align: center;
    }
  }

  // Anchor links
  .link-to {
    position: relative;
    top: -4.5em;
  }
}

// Date ranges
.daterange {
  margin-bottom: 0.2em;
}

// Education degrees
.degree-container {
  h4 {
    font-weight: normal;
  }

  .degree {
    margin-bottom: 0.1em;
    text-transform: none;
    letter-spacing: 0.16em;
    font-size: 0.8em;
  }

  .school {
    text-transform: none;
    padding-top: 0.3em;
    margin-bottom: 1em;
  }
}

// Course styling
.courses {
  .course-number {
    display: inline;
  }

  .course-name {
    display: inline;
    font-family: _font(family-heading);
    font-size: 0.7em;
    font-weight: 400;
    letter-spacing: 0.25em;
    line-height: 2.5;
    margin-top: -1em;
    text-transform: uppercase;
  }

  ul li {
    display: inline;
  }
}

.course-dot {
  display: inline;
}

// Responsive
@include breakpoint(small) {
  .course-dot {
    display: none;
  }

  .course-container a {
    display: block;
  }
}

